# bidder

./: .gitignore  README.md  index.html  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  jobs.py
backend/app/core/: config.py  logging.py
backend/app/data/: material_baseline.json
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  job.py
backend/app/plugins/: __init__.py  base.py
backend/app/plugins/trades/: __init__.py  concrete.py
backend/app/schemas/: __init__.py  job.py
backend/app/services/: __init__.py  analytics.py  geocoding.py  instructions.py  labor.py  materials.py  pipeline.py  weather.py
backend/tests/: test_materials.py
public/: index.html
src/: App.jsx
src/components/: AnalyticsPanel.jsx  BidSummary.jsx  JobForm.jsx  JobHistory.jsx
