[tool.poetry]
name = "bidder-backend"
version = "0.1.0"
description = "Bidder FastAPI backend"
authors = ["Bidder AI <devs@bidder.example>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {version = "^0.23.0", extras = ["standard"]}
httpx = "^0.24.1"
sqlmodel = "^0.0.8"
pydantic = "^1.10.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
